force-app/main/default/objects/AVA_BLNG__DebitNote_Line_Tax_Breakup__c/AVA_BLNG__DebitNote_Line_Tax_Breakup__c.object-meta.xml
<CustomObject>
    <label>Debit Note Line Tax Breakup</label>
    <nameField>
        <displayFormat>LB-{00}</displayFormat>
        <label>Debit Note Line Tax Breakup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debit Note Line Tax Breakups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>