force-app/main/default/objects/AVA_BLNG__DebitNote_Line_Tax_Breakup__c/fields/AVA_BLNG__Debit_Note_Line__c.field-meta.xml
<CustomField>
    <fullName>AVA_BLNG__Debit_Note_Line__c</fullName>
    <label>Debit Note Line</label>
    <referenceTo>blng__DebitNoteLine__c</referenceTo>
    <relationshipName>DebitNote_Line_Tax_Breakups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>