force-app/main/default/objects/AVA_BLNG__DebitNote_Line_Tax_Breakup__c/fields/AVA_BLNG__Juris_Type__c.field-meta.xml
<CustomField>
    <fullName>AVA_BLNG__Juris_Type__c</fullName>
    <label>Jurisdiction Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>