force-app/main/default/objects/AVA_BLNG__DebitNote_Line_Tax_Breakup__c/fields/AVA_BLNG__Tax__c.field-meta.xml
<CustomField>
    <fullName>AVA_BLNG__Tax__c</fullName>
    <label>Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>